syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.compliance;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/compliance/types";

message ComplianceInfoIndex {
  
  int32 vid = 1; 
  int32 pid = 2; 
  uint32 softwareVersion = 3; 
  string certificationType = 4; 
}
