syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.compliance;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/compliance/types";

message DeviceSoftwareCompliance {
  string CDCertificateID = 1; 
  repeated string complianceInformation = 2; 
  
}

